Updates adding title, and interesting aspects

--- a/lab1.html
+++ b/lab1.html
@@ -7,37 +7,50 @@
     </head>
     <body>
         <header>
-            <h1> Tiitle of theme </h1>
-            <p> paragraph about it </p>
+            <h1>String Cheese</h1>
+            <p>Lab 1/COMP-2230/Tanelle Lavallee</p>
         </header>
         <nav>
-            <h2>attractions or interesting aspects in a listed form </h2>
+            <h2>Interesting Aspects</h2>
             <ul>
                 <li>
-                    <a href="#attractions one">link one</a>
+                    <a href="#Flavours">Flavours</a>
                 </li>
                 <li>
-                    <a>link two </a>
+                    <a href="#Facts">Facts</a>
                 <li>
-                    <a>link three </a>
+                    <a href="#Nutrition">Nutrition</a>
                 </li>
             </ul>
             <video width="320" height="240" controls>
-                <source src="movie.mp4" type="video/mp4" />
+                <source src="c:\Users\Tanelle\Downloads\String_Cheese_Ads.mp4" type="video/mp4" />
             </video>
-            <blockquote cite="http://www.worldwildlife.org/who/index.html">
-                whatever quote being cited
+            <blockquote cite="https://www.cheestrings.ca/en/about-us/">
+                "Black Diamond® Cheestrings® is made with 100% real cheese and always promises
+                to be fun and nutritious. With no artificial colours, flavours, or added 
+                preservatives, like all pizza mozzarella, there’s only one rule with Cheestrings®,
+                play with your food."
             </blockquote>
         </nav>
-        <main>
+        <main id="Flavours">
+            <h2>Flavours</h2>
+            <p>String cheese comes in many flavours including; mozzarella, marble, sharp cheddar,
+                pepper jack, jalapeno, pizza, nacho, garden herb, smoked, old cheddar, and more!
+            </p>
 
         </main>
-        <section id="attractions one">
-
-
-
+        <section id="Facts">
+            <h2>Facts</h2>
+            <p>Tearing apart string cheese actually affects its flavor perception.
+                When a string of cheese is ripped, it exposes more contact with saliva, releasing
+                extra flavors.
+            </p>
         </section>
-        <section id="interesting aspect one">
+        <section id="Nutrition">
+            <h2>Nutrition</h2>
+            <p>One string cheese contains just over 6 grams of dairy protein and 85 calories. It is an excellent source
+               of vitamins and minerals including calcium, vitamin B12, and selenium. It contains 5.8 grams of fats, and
+               and 1.3 grams of carbohydrates, 0 grams of fibre, and less than 1 gram of sugar. </p>
 
 
         </section>
