Updated two new sections

--- a/lab1.html
+++ b/lab1.html
@@ -21,6 +21,12 @@
                 <li>
                     <a href="#Nutrition">Nutrition</a>
                 </li>
+                <li>
+                    <a href="#How to eat string cheese">How To Eat String Cheese</a>
+                </li>
+                <li>
+                    <a href="#Official cheese string site">Official Cheese String Site</a>
+                </li>
             </ul>
             <video width="320" height="240" controls>
                 <source src="c:\Users\Tanelle\Downloads\String_Cheese_Ads.mp4" type="video/mp4" />
@@ -51,9 +57,20 @@
             <p>One string cheese contains just over 6 grams of dairy protein and 85 calories. It is an excellent source
                of vitamins and minerals including calcium, vitamin B12, and selenium. It contains 5.8 grams of fats, and
                and 1.3 grams of carbohydrates, 0 grams of fibre, and less than 1 gram of sugar. </p>
-
-
         </section>
+        <section id="How to eat string cheese">
+            <h2>How To Eat String Cheese</h2>
+            <figure>
+                <img src="c:\Users\Tanelle\Downloads\Loryn Brantz.jpg" alt="comic by Loryn Brantz on how to eat string cheese" style="width:20%">
+                <figcaption>Comic by Loryn Brantz</figcaption>
+              </figure>
+        </section>
+        <section id="Official cheese string site">
+            <a href="https://www.cheestrings.ca/en/?gad_source=1&gclid=Cj0KCQjw28W2BhC7ARIsAPerrcJtZjXPbGOKrz7rarN-fktEKfsyDOop5NxxgyJ4dNWosXpzvVNKmtIaApGTEALw_wcB">
+                Official Cheese String Webpage
+            </a>
+        </section>
+        
 
 
 
