Updated location of images on file

--- a/lab1.html
+++ b/lab1.html
@@ -29,7 +29,7 @@
                 </li>
             </ul>
             <video width="320" height="240" controls>
-                <source src="c:\Users\Tanelle\Downloads\String_Cheese_Ads.mp4" type="video/mp4" />
+                <source src="c:\Users\Tanelle\Documents\RRC\Term2\COMP-2230\COMP_2230_LAB_1\images\String_Cheese_Ads.mp4" type="video/mp4" />
             </video>
             <blockquote cite="https://www.cheestrings.ca/en/about-us/">
                 "Black Diamond® Cheestrings® is made with 100% real cheese and always promises
@@ -61,7 +61,7 @@
         <section id="How to eat string cheese">
             <h2>How To Eat String Cheese</h2>
             <figure>
-                <img src="c:\Users\Tanelle\Downloads\Loryn Brantz.jpg" alt="comic by Loryn Brantz on how to eat string cheese" style="width:20%">
+                <img src="c:\Users\Tanelle\Documents\RRC\Term2\COMP-2230\COMP_2230_LAB_1\images\Loryn Brantz.jpg" alt="comic by Loryn Brantz on how to eat string cheese" style="width:20%">
                 <figcaption>Comic by Loryn Brantz</figcaption>
               </figure>
         </section>
