Updated flavours table

--- a/lab1.html
+++ b/lab1.html
@@ -40,10 +40,50 @@
         </nav>
         <main id="Flavours">
             <h2>Flavours</h2>
-            <p>String cheese comes in many flavours including; mozzarella, marble, sharp cheddar,
-                pepper jack, jalapeno, pizza, nacho, garden herb, smoked, old cheddar, and more!
-            </p>
-
+            <p>String cheese comes in many flavours including;</p>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Cheese</th>
+                        <th>Flavour</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Mozarella</td>
+                        <td>Pizza</td>
+                    </tr>
+                    <tr>
+                        <td>Mozarella</td>
+                        <td>Nacho</td>
+                    </tr>
+                    <tr>
+                        <td>Mozarella</td>
+                        <td>Plain</td>
+                    </tr>
+                    <tr>
+                        <td>Mozarella</td>
+                        <td>Garden Herb</td>
+                    </tr>
+                    <tr>
+                        <td>Cheddar</td>
+                        <td>Marble</td>
+                    </tr>
+                    <tr>
+                        <td>Cheddar</td>
+                        <td>Old</td>
+                    </tr>
+                    <tr>
+                        <td>Mozarella</td>
+                        <td>Jalepeno</td>
+                    </tr>
+                    <tr>
+                        <td>Mozarella</td>
+                        <td>Pepper Jack</td>
+                    </tr>
+                </tbody>
+            </table>
+            <p>AND MORE!</p>
         </main>
         <section id="Facts">
             <h2>Facts</h2>
@@ -59,18 +99,20 @@
                and 1.3 grams of carbohydrates, 0 grams of fibre, and less than 1 gram of sugar. </p>
         </section>
         <section id="How to eat string cheese">
+            <nav>
             <h2>How To Eat String Cheese</h2>
             <figure>
                 <img src="c:\Users\Tanelle\Documents\RRC\Term2\COMP-2230\COMP_2230_LAB_1\images\Loryn Brantz.jpg" alt="comic by Loryn Brantz on how to eat string cheese" style="width:20%">
                 <figcaption>Comic by Loryn Brantz</figcaption>
               </figure>
+            </nav>
         </section>
         <section id="Official cheese string site">
-            <a href="https://www.cheestrings.ca/en/?gad_source=1&gclid=Cj0KCQjw28W2BhC7ARIsAPerrcJtZjXPbGOKrz7rarN-fktEKfsyDOop5NxxgyJ4dNWosXpzvVNKmtIaApGTEALw_wcB">
-                Official Cheese String Webpage
-            </a>
+            <nav>
+            <a href="https://www.cheestrings.ca/en/?gad_source=1&gclid=Cj0KCQjw28W2BhC7ARIsAPerrcJtZjXPbGOKrz7rarN-fktEKfsyDOop5NxxgyJ4dNWosXpzvVNKmtIaApGTEALw_wcB"
+               target="_blank">Official Cheese String Webpage</a>
+            </nav>
         </section>
-        
 
 
 
